[gd_scene load_steps=36 format=3 uid="uid://c2havtse0trim"]

[ext_resource type="Script" path="res://Assets/Characters/Player/player.gd" id="1_n3clx"]
[ext_resource type="PackedScene" uid="uid://dmgxx6ld7dnig" path="res://Assets/Objects/bar/bar.tscn" id="3_mnml5"]
[ext_resource type="Texture2D" uid="uid://blvk8r7wvx800" path="res://Assets/Sprites/Player/spritesheet.png" id="4_1m1en"]
[ext_resource type="PackedScene" uid="uid://c5ycras7341kk" path="res://Assets/Objects/number_trash_icon/Remaining_Cans_Number.tscn" id="4_588re"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1ygo"]
size = Vector2(10, 6)

[sub_resource type="Animation" id="Animation_d0mh2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Spritesheet:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_h0dkm"]
resource_name = "idle_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_uug1m"]
resource_name = "idle_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_310dt"]
resource_name = "idle_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_fqys8"]
resource_name = "idle_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_j8g78"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_hvi4i"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_0ixk8"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_j7a5v"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_cj071"]
resource_name = "LeftRun_TrashMan"
length = 1.25
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_23fdn"]
resource_name = "Idle_TrashMan"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_dwymk"]
resource_name = "RightIdle_TrashMan"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_4np7g"]
resource_name = "RightRun_TrashMan"
length = 1.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 7, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7y0el"]
_data = {
"LeftIdle_TrashMan": SubResource("Animation_23fdn"),
"LeftRun_TrashMan": SubResource("Animation_cj071"),
"RESET": SubResource("Animation_d0mh2"),
"RightIdle_TrashMan": SubResource("Animation_dwymk"),
"RightRun_TrashMan": SubResource("Animation_4np7g"),
"idle_down": SubResource("Animation_h0dkm"),
"idle_left": SubResource("Animation_uug1m"),
"idle_right": SubResource("Animation_310dt"),
"idle_up": SubResource("Animation_fqys8"),
"walk_down": SubResource("Animation_j8g78"),
"walk_left": SubResource("Animation_hvi4i"),
"walk_right": SubResource("Animation_0ixk8"),
"walk_up": SubResource("Animation_j7a5v")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ae7xs"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fugq4"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jhfab"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fxog2"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_edp3h"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ae7xs")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_fugq4")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_jhfab")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_fxog2")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c45w7"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_he0d6"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n68a7"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u31dp"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_clixa"]
blend_point_0/node = SubResource("AnimationNodeAnimation_c45w7")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_he0d6")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_n68a7")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_u31dp")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sbrpf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kk2am"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r5f26"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_h368w"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_edp3h")
states/Idle/position = Vector2(406, 100)
states/Start/position = Vector2(250, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_clixa")
states/Walk/position = Vector2(570, 100)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_sbrpf"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_kk2am"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_r5f26")]
graph_offset = Vector2(-2, -48)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_bk0dw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dpjs2"]
height = 26.0

[node name="PlayerCat" type="CharacterBody2D"]
script = ExtResource("1_n3clx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
hframes = 4
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q1ygo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7y0el")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_h368w")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_bk0dw")
parameters/Idle/blend_position = Vector2(0, 0.1)
parameters/Walk/blend_position = Vector2(-0.268505, 0.235371)

[node name="Bar" parent="." instance=ExtResource("3_mnml5")]
z_index = 5
offset_left = -15.0
offset_top = -23.0
offset_right = -15.0
offset_bottom = -23.0

[node name="Area2D" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_dpjs2")

[node name="Remaining_Cans_Number" parent="." instance=ExtResource("4_588re")]
visible = false
offset_left = -13.0
offset_top = -24.0
offset_right = -13.0
offset_bottom = -24.0

[node name="Spritesheet" type="Sprite2D" parent="."]
position = Vector2(1, 14)
texture = ExtResource("4_1m1en")
hframes = 10
frame = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
